Toast/ParToast.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Toast/ParToast.y
-----------------------------------------------------------------------------


rule 35 is unused
rule 36 is unused
rule 37 is unused
rule 63 is unused
rule 64 is unused
rule 65 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Arg -> Type Ident                                  (5)
	Arg -> Type '&' Ident                              (6)
	ListArg ->                                         (7)
	ListArg -> Arg                                     (8)
	ListArg -> Arg ',' ListArg                         (9)
	Block -> '{' ListStmt '}'                          (10)
	ListStmt ->                                        (11)
	ListStmt -> Stmt ListStmt                          (12)
	Stmt -> ';'                                        (13)
	Stmt -> Block                                      (14)
	Stmt -> Type ListItem ';'                          (15)
	Stmt -> Ident '=' Expr ';'                         (16)
	Stmt -> Ident '++' ';'                             (17)
	Stmt -> Ident '--' ';'                             (18)
	Stmt -> 'return' Expr ';'                          (19)
	Stmt -> 'return' ';'                               (20)
	Stmt -> 'if' '(' Expr ')' Block                    (21)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (22)
	Stmt -> 'while' '(' Expr ')' Block                 (23)
	Stmt -> 'break' ';'                                (24)
	Stmt -> 'continue' ';'                             (25)
	Stmt -> 'Print' '(' Expr ')' ';'                   (26)
	Stmt -> Type Ident '(' ListArg ')' Block           (27)
	Item -> Ident                                      (28)
	Item -> Ident '=' Expr                             (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	Type -> 'int'                                      (32)
	Type -> 'string'                                   (33)
	Type -> 'boolean'                                  (34)
	ListType ->                                        (35)
	ListType -> Type                                   (36)
	ListType -> Type ',' ListType                      (37)
	ExprArg -> Expr                                    (38)
	ExprArg -> '&' Ident                               (39)
	ListExprArg ->                                     (40)
	ListExprArg -> ExprArg                             (41)
	ListExprArg -> ExprArg ',' ListExprArg             (42)
	Expr6 -> Ident                                     (43)
	Expr6 -> Integer                                   (44)
	Expr6 -> 'true'                                    (45)
	Expr6 -> 'false'                                   (46)
	Expr6 -> Ident '(' ListExprArg ')'                 (47)
	Expr6 -> String                                    (48)
	Expr6 -> '(' Expr ')'                              (49)
	Expr5 -> '-' Expr6                                 (50)
	Expr5 -> '!' Expr6                                 (51)
	Expr5 -> Expr6                                     (52)
	Expr4 -> Expr4 MulOp Expr5                         (53)
	Expr4 -> Expr5                                     (54)
	Expr3 -> Expr3 AddOp Expr4                         (55)
	Expr3 -> Expr4                                     (56)
	Expr2 -> Expr2 RelOp Expr3                         (57)
	Expr2 -> Expr3                                     (58)
	Expr1 -> Expr2 '&&' Expr1                          (59)
	Expr1 -> Expr2                                     (60)
	Expr -> Expr1 '||' Expr                            (61)
	Expr -> Expr1                                      (62)
	ListExpr ->                                        (63)
	ListExpr -> Expr                                   (64)
	ListExpr -> Expr ',' ListExpr                      (65)
	AddOp -> '+'                                       (66)
	AddOp -> '-'                                       (67)
	MulOp -> '*'                                       (68)
	MulOp -> '/'                                       (69)
	MulOp -> '%'                                       (70)
	RelOp -> '<'                                       (71)
	RelOp -> '<='                                      (72)
	RelOp -> '>'                                       (73)
	RelOp -> '>='                                      (74)
	RelOp -> '=='                                      (75)
	RelOp -> '!='                                      (76)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'Print'        { PT _ (TS _ 22) }
	'boolean'      { PT _ (TS _ 23) }
	'break'        { PT _ (TS _ 24) }
	'continue'     { PT _ (TS _ 25) }
	'else'         { PT _ (TS _ 26) }
	'false'        { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'return'       { PT _ (TS _ 30) }
	'string'       { PT _ (TS _ 31) }
	'true'         { PT _ (TS _ 32) }
	'while'        { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'||'           { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Arg             rules 5, 6
	ListArg         rules 7, 8, 9
	Block           rule  10
	ListStmt        rules 11, 12
	Stmt            rules 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	Type            rules 32, 33, 34
	ListType        rules 35, 36, 37
	ExprArg         rules 38, 39
	ListExprArg     rules 40, 41, 42
	Expr6           rules 43, 44, 45, 46, 47, 48, 49
	Expr5           rules 50, 51, 52
	Expr4           rules 53, 54
	Expr3           rules 55, 56
	Expr2           rules 57, 58
	Expr1           rules 59, 60
	Expr            rules 61, 62
	ListExpr        rules 63, 64, 65
	AddOp           rules 66, 67
	MulOp           rules 68, 69, 70
	RelOp           rules 71, 72, 73, 74, 75, 76

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	';'            shift, and enter state 9
	'Print'        shift, and enter state 10
	'boolean'      shift, and enter state 11
	'break'        shift, and enter state 12
	'continue'     shift, and enter state 13
	'if'           shift, and enter state 14
	'int'          shift, and enter state 15
	'return'       shift, and enter state 16
	'string'       shift, and enter state 17
	'while'        shift, and enter state 18
	'{'            shift, and enter state 19
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 11

	Ident          goto state 3
	Program        goto state 4
	Block          goto state 5
	ListStmt       goto state 6
	Stmt           goto state 7
	Type           goto state 8

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 16)
	Stmt -> Ident . '++' ';'                            (rule 17)
	Stmt -> Ident . '--' ';'                            (rule 18)

	'++'           shift, and enter state 48
	'--'           shift, and enter state 49
	'='            shift, and enter state 50


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	Stmt -> Block .                                     (rule 14)

	';'            reduce using rule 14
	'Print'        reduce using rule 14
	'boolean'      reduce using rule 14
	'break'        reduce using rule 14
	'continue'     reduce using rule 14
	'if'           reduce using rule 14
	'int'          reduce using rule 14
	'return'       reduce using rule 14
	'string'       reduce using rule 14
	'while'        reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_Ident        reduce using rule 14
	%eof           reduce using rule 14


State 6

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 7

	ListStmt -> Stmt . ListStmt                         (rule 12)

	';'            shift, and enter state 9
	'Print'        shift, and enter state 10
	'boolean'      shift, and enter state 11
	'break'        shift, and enter state 12
	'continue'     shift, and enter state 13
	'if'           shift, and enter state 14
	'int'          shift, and enter state 15
	'return'       shift, and enter state 16
	'string'       shift, and enter state 17
	'while'        shift, and enter state 18
	'{'            shift, and enter state 19
	'}'            reduce using rule 11
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 11

	Ident          goto state 3
	Block          goto state 5
	ListStmt       goto state 47
	Stmt           goto state 7
	Type           goto state 8

State 8

	Stmt -> Type . ListItem ';'                         (rule 15)
	Stmt -> Type . Ident '(' ListArg ')' Block          (rule 27)

	L_Ident        shift, and enter state 2

	Ident          goto state 44
	Item           goto state 45
	ListItem       goto state 46

State 9

	Stmt -> ';' .                                       (rule 13)

	';'            reduce using rule 13
	'Print'        reduce using rule 13
	'boolean'      reduce using rule 13
	'break'        reduce using rule 13
	'continue'     reduce using rule 13
	'if'           reduce using rule 13
	'int'          reduce using rule 13
	'return'       reduce using rule 13
	'string'       reduce using rule 13
	'while'        reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	L_Ident        reduce using rule 13
	%eof           reduce using rule 13


State 10

	Stmt -> 'Print' . '(' Expr ')' ';'                  (rule 26)

	'('            shift, and enter state 43


State 11

	Type -> 'boolean' .                                 (rule 34)

	'&'            reduce using rule 34
	L_Ident        reduce using rule 34


State 12

	Stmt -> 'break' . ';'                               (rule 24)

	';'            shift, and enter state 42


State 13

	Stmt -> 'continue' . ';'                            (rule 25)

	';'            shift, and enter state 41


State 14

	Stmt -> 'if' . '(' Expr ')' Block                   (rule 21)
	Stmt -> 'if' . '(' Expr ')' Block 'else' Block      (rule 22)

	'('            shift, and enter state 40


State 15

	Type -> 'int' .                                     (rule 32)

	'&'            reduce using rule 32
	L_Ident        reduce using rule 32


State 16

	Stmt -> 'return' . Expr ';'                         (rule 19)
	Stmt -> 'return' . ';'                              (rule 20)

	'!'            shift, and enter state 32
	'('            shift, and enter state 33
	'-'            shift, and enter state 34
	';'            shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 31

State 17

	Type -> 'string' .                                  (rule 33)

	'&'            reduce using rule 33
	L_Ident        reduce using rule 33


State 18

	Stmt -> 'while' . '(' Expr ')' Block                (rule 23)

	'('            shift, and enter state 21


State 19

	Block -> '{' . ListStmt '}'                         (rule 10)

	';'            shift, and enter state 9
	'Print'        shift, and enter state 10
	'boolean'      shift, and enter state 11
	'break'        shift, and enter state 12
	'continue'     shift, and enter state 13
	'if'           shift, and enter state 14
	'int'          shift, and enter state 15
	'return'       shift, and enter state 16
	'string'       shift, and enter state 17
	'while'        shift, and enter state 18
	'{'            shift, and enter state 19
	'}'            reduce using rule 11
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Block          goto state 5
	ListStmt       goto state 20
	Stmt           goto state 7
	Type           goto state 8

State 20

	Block -> '{' ListStmt . '}'                         (rule 10)

	'}'            shift, and enter state 82


State 21

	Stmt -> 'while' '(' . Expr ')' Block                (rule 23)

	'!'            shift, and enter state 32
	'('            shift, and enter state 33
	'-'            shift, and enter state 34
	'false'        shift, and enter state 36
	'true'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Expr6          goto state 25
	Expr5          goto state 26
	Expr4          goto state 27
	Expr3          goto state 28
	Expr2          goto state 29
	Expr1          goto state 30
	Expr           goto state 81

State 22

	Expr6 -> Ident .                                    (rule 43)
	Expr6 -> Ident . '(' ListExprArg ')'                (rule 47)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	'('            shift, and enter state 80
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 23

	Expr6 -> Integer .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 24

	Expr6 -> String .                                   (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48


State 25

	Expr5 -> Expr6 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'||'           reduce using rule 52


State 26

	Expr4 -> Expr5 .                                    (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'||'           reduce using rule 54


State 27

	Expr4 -> Expr4 . MulOp Expr5                        (rule 53)
	Expr3 -> Expr4 .                                    (rule 56)

	'!='           reduce using rule 56
	'%'            shift, and enter state 77
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            shift, and enter state 78
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            shift, and enter state 79
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'||'           reduce using rule 56

	MulOp          goto state 76

State 28

	Expr3 -> Expr3 . AddOp Expr4                        (rule 55)
	Expr2 -> Expr3 .                                    (rule 58)
